# base

./: .dockerignore  .gitignore  Cargo.toml  Justfile  deny.toml
.github/workflows/: benchmark.yml  build-release.yml  ci.yml  stale.yml
actions/: README.md
actions/harness/: Cargo.toml
actions/harness/src/: engine.rs  harness.rs  l2.rs  lib.rs  matrix.rs  miner.rs  node.rs  p2p.rs  test_rollup_config.rs  verifier.rs
actions/harness/src/batcher/: actor.rs  mod.rs  tx_manager.rs
actions/harness/src/providers/: l1.rs  l1_block_fetcher.rs  mod.rs
actions/harness/tests/: base_v1_activation.rs  batch_submission.rs  batcher_blobs.rs  batcher_channels.rs  batcher_hardfork_transitions.rs  batcher_sequencer_drift.rs  derivation.rs  ecotone_activation.rs  finalization.rs  hardfork_activation.rs  holocene_activation.rs  l1_mining.rs  node_derivation.rs  operator_fees.rs  unsafe_gossip.rs
actions/harness/tests/base_v1/: clz.rs  derivation.rs  modexp.rs  p256.rs
crates/alloy/chains/: Cargo.toml
crates/alloy/evm/: Cargo.toml
crates/batcher/admin/: Cargo.toml
crates/batcher/comp/: Cargo.toml
crates/batcher/core/: Cargo.toml
crates/batcher/encoder/: Cargo.toml
crates/batcher/service/: Cargo.toml
crates/batcher/service/src/: config.rs  l1_source.rs  lib.rs  recent_txs.rs  service.rs  source.rs  subscription.rs
crates/batcher/source/: Cargo.toml
crates/builder/core/: Cargo.toml
crates/builder/metering/: Cargo.toml
crates/builder/publish/: Cargo.toml
crates/builder/publish/src/: broadcast.rs  listener.rs  metrics.rs
crates/client/cli/: Cargo.toml
crates/client/flashblocks-node/: Cargo.toml
crates/client/metering/: Cargo.toml
crates/client/txpool-tracing/: Cargo.toml
crates/consensus/derive/: Cargo.toml
crates/consensus/disc/: Cargo.toml
crates/consensus/engine/: Cargo.toml
crates/consensus/genesis/: Cargo.toml
crates/consensus/gossip/: Cargo.toml
crates/consensus/peers/: Cargo.toml
crates/consensus/protocol/: Cargo.toml
crates/consensus/providers-alloy/: Cargo.toml
crates/consensus/registry/: Cargo.toml
crates/consensus/rpc/: Cargo.toml
crates/consensus/safedb/: Cargo.toml  README.md
crates/consensus/service/: Cargo.toml
crates/consensus/sources/: Cargo.toml
crates/consensus/upgrades/: Cargo.toml
crates/execution/chainspec/: Cargo.toml  README.md
crates/execution/cli/: Cargo.toml
crates/execution/consensus/: Cargo.toml
crates/execution/evm/: Cargo.toml
crates/execution/flashblocks/: Cargo.toml
crates/execution/hardforks/: Cargo.toml
crates/execution/node/: Cargo.toml
crates/execution/payload/: Cargo.toml
crates/execution/revm/: Cargo.toml  README.md
crates/execution/rpc/: Cargo.toml
crates/execution/runner/: Cargo.toml
crates/infra/audit/: Cargo.toml
crates/infra/basectl/: Cargo.toml
crates/infra/based/: Cargo.toml
crates/infra/ingress-rpc/: Cargo.toml
crates/infra/load-tests/: Cargo.toml  Justfile  README.md
crates/infra/load-tests/base-load-tests-core/: Cargo.toml  README.md
crates/infra/load-tests/base-load-tests-core/examples/: config.yaml  devnet.yaml  spam.rs
crates/infra/load-tests/base-load-tests-core/src/: lib.rs
crates/infra/load-tests/base-load-tests-core/src/config/: mod.rs  test_config.rs
crates/infra/load-tests/base-load-tests-core/src/metrics/: collector.rs  mod.rs
crates/infra/load-tests/base-load-tests-core/src/rpc/: client.rs  mod.rs
crates/infra/load-tests/base-load-tests-core/src/runner/: confirmer.rs  load_runner.rs  mod.rs
crates/infra/load-tests/base-load-tests-core/src/workload/: generator.rs
crates/infra/load-tests/base-load-tests-core/src/workload/payloads/: calldata.rs  mod.rs  precompile.rs  uniswap.rs
crates/infra/load-tests/base-load-tests-core/tests/: smoke.rs
crates/infra/load-tests/examples/: devnet.yaml  load_test.rs  sepolia-alpha.yaml  sepolia.yaml
crates/infra/load-tests/src/: lib.rs
crates/infra/load-tests/src/config/: mod.rs  test_config.rs
crates/infra/load-tests/src/metrics/: aggregator.rs  types.rs
crates/infra/load-tests/src/rpc/: client.rs  mod.rs
crates/infra/load-tests/src/runner/: config.rs  confirmer.rs  load_runner.rs  rate_limiter.rs
crates/infra/load-tests/src/utils/: mod.rs
crates/infra/load-tests/src/workload/: generator.rs  mod.rs
crates/infra/load-tests/src/workload/payloads/: calldata.rs  erc20.rs  looper.rs  mod.rs  precompile.rs  storage.rs  transfer.rs  uniswap.rs
crates/infra/load-tests/tests/: smoke.rs
crates/infra/websocket-proxy/: Cargo.toml
crates/proof/challenge/: Cargo.toml  README.md
crates/proof/challenge/src/: cli.rs  config.rs  driver.rs  lib.rs  metrics.rs  pending.rs  scanner.rs  service.rs  submitter.rs  tee.rs  test_utils.rs  validator.rs  verify.rs
crates/proof/challenge/tests/: driver.rs
crates/proof/contracts/: Cargo.toml
crates/proof/executor/: Cargo.toml
crates/proof/host/: Cargo.toml
crates/proof/preimage/: Cargo.toml
crates/proof/primitives/: Cargo.toml
crates/proof/proof/: Cargo.toml
crates/proof/proposer/: Cargo.toml  README.md
crates/proof/rpc/: Cargo.toml
crates/proof/tee/core/: Cargo.toml
crates/proof/tee/core/src/: error.rs  lib.rs
crates/proof/tee/core/src/types/: mod.rs
crates/proof/tee/nitro-attestation-prover/: Cargo.toml
crates/proof/tee/nitro-attestation-prover/guest/: Justfile
crates/proof/tee/nitro-attestation-prover/src/: boundless.rs  lib.rs  types.rs
crates/txpool/: Cargo.toml
crates/utilities/reth-cli/: Cargo.toml  README.md
crates/utilities/reth-cli/src/: lib.rs  version.rs
crates/utilities/tx-manager/: Cargo.toml  README.md
crates/utilities/tx-manager/src/: error.rs  lib.rs  macros.rs  manager.rs  metrics.rs  signer_config.rs
crates/utilities/tx-manager/tests/: craft_tx.rs  reorg.rs  send_lifecycle.rs
devnet/tests/: bundles.rs  smoke.rs  tx_forwarding.rs
docs/guides/: UPGRADES.md
etc/docker/: Dockerfile.devnet  Dockerfile.enclave  Dockerfile.nitro-enclave  Dockerfile.proxyd  Dockerfile.rust-services  Justfile  README.md  devnet-env  docker-bake.hcl  docker-compose.ha.yml  docker-compose.yml
(+404 files in other folders)
