[package]
name = "base-action-harness"
description = "Action test harness for Base — simulated L1/L2 actors for protocol integration testing"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
revm.workspace = true
tracing.workspace = true
thiserror.workspace = true
alloy-rlp.workspace = true
alloy-eips.workspace = true
async-trait.workspace = true
base-consensus-node.workspace = true
base-consensus-gossip.workspace = true
alloy-signer.workspace = true
alloy-network.workspace = true
alloy-provider.workspace = true
alloy-transport.workspace = true
alloy-hardforks.workspace = true
alloy-primitives.workspace = true
alloy-transport-http.workspace = true
alloy-trie = { workspace = true, features = ["ethereum"] }
alloy-consensus = { workspace = true, features = ["std"] }
alloy-signer-local.workspace = true
alloy-rpc-types-eth.workspace = true
alloy-rpc-types-engine = { workspace = true, features = ["std"] }
reth-evm = { workspace = true, features = ["std"] }
base-revm = { workspace = true, features = ["std"] }
base-blobs.workspace = true
base-runtime.workspace = true
base-protocol = { workspace = true, features = ["std"] }
base-tx-manager.workspace = true
base-batcher-core.workspace = true
base-batcher-encoder.workspace = true
base-batcher-source.workspace = true
base-alloy-chains.workspace = true
base-alloy-network.workspace = true
base-alloy-provider.workspace = true
base-alloy-rpc-types.workspace = true
base-execution-evm.workspace = true
base-consensus-engine.workspace = true
base-consensus-registry.workspace = true
base-execution-chainspec.workspace = true
base-alloy-rpc-types-engine.workspace = true
base-alloy-consensus = { workspace = true, features = ["std", "evm"] }
base-consensus-genesis = { workspace = true, features = ["std"] }
base-consensus-derive = { workspace = true, features = ["test-utils"] }
tokio-util.workspace = true
tokio = { workspace = true, features = ["rt"] }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
