[package]
name = "base-batcher-service"
description = "Batcher service: config, CLI arguments, and service startup"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
url.workspace = true
eyre.workspace = true
futures.workspace = true
tokio-util.workspace = true
async-trait.workspace = true
base-tx-manager.workspace = true
base-batcher-core.workspace = true
base-batcher-admin.workspace = true
base-alloy-network.workspace = true
base-batcher-source.workspace = true
base-batcher-encoder.workspace = true
derive_more = { workspace = true, features = ["debug"] }
tracing = { workspace = true, features = ["std"] }
base-runtime = { workspace = true, features = ["tokio"] }
alloy-signer-local.workspace = true
alloy-primitives = { workspace = true, features = ["std"] }
jsonrpsee = { workspace = true, features = ["http-client"] }
alloy-rpc-types-eth = { workspace = true, features = ["std"] }
base-alloy-consensus = { workspace = true, features = ["std"] }
tokio = { workspace = true, features = ["rt", "sync", "time"] }
base-consensus-rpc = { workspace = true, features = ["client"] }
alloy-provider = { workspace = true, features = ["pubsub", "ws"] }
base-alloy-rpc-jsonrpsee = { workspace = true, features = ["client"] }

[dev-dependencies]
httpmock.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
