[package]
name = "base-builder-publish"
description = "WebSocket broadcast publisher for the Base block builder"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
serde.workspace = true
futures.workspace = true
tracing.workspace = true
tokio-util.workspace = true
base-metrics.workspace = true
tokio-tungstenite.workspace = true
serde_json = { workspace = true, features = ["std"] }
metrics = { workspace = true, optional = true }
tokio = { workspace = true, features = ["net", "sync", "macros", "rt"] }

[dev-dependencies]
rstest.workspace = true
metrics-exporter-prometheus.workspace = true
tokio = { workspace = true, features = ["net", "sync", "macros", "rt", "test-util"] }

[features]
default = [ "metrics" ]
metrics = [ "base-metrics/metrics", "dep:metrics" ]
