[package]
name = "base-challenger"
description = "Base Challenger"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# Alloy
alloy-provider.workspace = true
alloy-consensus.workspace = true
alloy-primitives.workspace = true
alloy-signer-local.workspace = true
alloy-rpc-types-eth.workspace = true

# Async
tokio.workspace = true
futures.workspace = true
async-trait.workspace = true

# Tracing
tracing.workspace = true

# Serialization
serde.workspace = true

# Error handling
eyre.workspace = true
thiserror.workspace = true

# CLI
clap.workspace = true
base-cli-utils.workspace = true

# Contracts
base-proof-contracts.workspace = true

# Transaction management
base-tx-manager.workspace = true

# RPC
base-proof-rpc.workspace = true

# ZK proof client
base-zk-client.workspace = true

# Protocol
base-protocol.workspace = true

# Enclave
base-enclave.workspace = true
base-enclave-client.workspace = true
base-proof-primitives = { workspace = true, features = ["serde", "std"] }

# Metrics
metrics.workspace = true

# TLS
rustls = { workspace = true, features = ["ring"] }

# Shutdown
tokio-util.workspace = true

# Misc
url.workspace = true
humantime.workspace = true
uuid = { workspace = true, features = ["v5"] }
axum = { workspace = true, features = ["http1", "tokio"] }

# Test utilities (optional)
alloy-rlp = { workspace = true, optional = true }
alloy-trie = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

[dev-dependencies]
rstest.workspace = true
reqwest = { workspace = true, features = ["json"] }
tokio = { workspace = true, features = ["test-util"] }
base-challenger = { path = ".", features = ["test-utils"] }

[features]
test-utils = [ "alloy-rlp", "alloy-trie", "serde_json" ]
