[package]
name = "base-tx-manager"
description = "Transaction lifecycle management for Base onchain components"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# alloy
alloy-network.workspace = true
alloy-provider.workspace = true
alloy-consensus.workspace = true
alloy-primitives.workspace = true
alloy-signer-local.workspace = true
alloy-eips = { workspace = true, features = ["std", "kzg"] }
alloy-rpc-types-eth = { workspace = true, features = ["std"] }

# base
base-alloy-signer.workspace = true

# misc
url.workspace = true
backon.workspace = true
metrics.workspace = true
thiserror.workspace = true
tracing = { workspace = true, features = ["std"] }
tokio = { workspace = true, features = ["sync", "time"] }

[dev-dependencies]
rayon.workspace = true
rstest.workspace = true
proptest.workspace = true
humantime.workspace = true
async-trait.workspace = true
alloy-signer.workspace = true
alloy-node-bindings.workspace = true
clap = { workspace = true, features = ["derive", "env"] }
tokio = { workspace = true, features = ["macros", "net", "rt", "rt-multi-thread"] }
