[package]
name = "base-proof-tee-nitro-attestation-prover"
description = "ZK attestation prover for AWS Nitro Enclave attestation documents"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# Verification types (always available)
base-proof-tee-nitro-verifier.workspace = true

# Types / traits (always available)
thiserror.workspace = true
async-trait.workspace = true
alloy-primitives.workspace = true

# Proving backends (behind `prove` feature to avoid pulling in risc0-sys
# and its Metal kernel build requirement on macOS)
url = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
boundless-market = { workspace = true, optional = true }
alloy-signer-local = { workspace = true, optional = true }
risc0-ethereum-contracts = { workspace = true, optional = true }
tokio = { workspace = true, features = ["rt"], optional = true }
risc0-zkvm = { workspace = true, features = ["prove"], optional = true }

[dev-dependencies]
rstest.workspace = true

[features]
prove = [
	"dep:alloy-signer-local",
	"dep:boundless-market",
	"dep:risc0-ethereum-contracts",
	"dep:risc0-zkvm",
	"dep:tokio",
	"dep:tracing",
	"dep:url",
]
